--- a/tea-station/index.html
+++ b/tea-station/index.html
@@ -17,7 +17,66 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>tea station</h1>
+    <!-- navbar -->
+    <!-- header -->
+<header class="header">
+  <div class="banner">
+    <h2>Over one hundred flavors of</h2>
+    <h1> 
+      specially <br> 
+      crafted tea
+    </h1>
+    <a href="skills.html" class="btn banner-btn">explore</a>
+  </div>
+</header>
+
+    <!--end of header -->
+    <div class="content-divider">
+   
+    <!--skills section-->
+    <section class="skills clearfix">
+      <!--single skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mug-hot"></i>
+        </span>
+        <h4 class="skill-title">made in US</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
+      </article>
+      <!--end single skill-->
+      <!--single skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-glass-cheers"></i>
+        </span>
+        <h4 class="skill-title">relaxation</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
+      </article>
+      <!--end single skill-->
+      <!--single skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-bomb"></i>
+        </span>
+        <h4 class="skill-title">energy</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
+      </article>
+      <!--end single skill-->
+      <!--single skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-mortar-pestle"></i>
+        </span>
+        <h4 class="skill-title">family recipe</h4>
+        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
+      </article>
+      <!--end single skill-->
+    </section>
+    
+    <!--end skills section-->
+
+</div>
+
     <!-- YOUR CODE GOES HERE -->
 
     <script src="app.js"></script>
