--- a/tea-station/index.html
+++ b/tea-station/index.html
@@ -1,84 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || Home</title>
-    <!-- font-awesome -->
-    <!--
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Tea Station || Home</title>
+  <!-- font-awesome -->
+  <!--
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
     />
-    -->    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <!-- custom css -->
+    -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+  <!-- custom css -->
 
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- navbar -->
-    <!-- header -->
-<header class="header">
-  <div class="banner">
-    <h2>Over one hundred flavors of</h2>
-    <h1> 
-      specially <br> 
-      crafted tea
-    </h1>
-    <a href="skills.html" class="btn banner-btn">explore</a>
-  </div>
-</header>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <!--end of header -->
-    <div class="content-divider">
-   
-    <!--skills section-->
-    <section class="skills clearfix">
-      <!--single skill-->
-      <article class="skill">
-        <span class="skill-icon">
-          <i class="fas fa-mug-hot"></i>
-        </span>
-        <h4 class="skill-title">made in US</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
-      </article>
-      <!--end single skill-->
-      <!--single skill-->
-      <article class="skill">
-        <span class="skill-icon">
-          <i class="fas fa-glass-cheers"></i>
-        </span>
-        <h4 class="skill-title">relaxation</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
-      </article>
-      <!--end single skill-->
-      <!--single skill-->
-      <article class="skill">
-        <span class="skill-icon">
-          <i class="fas fa-bomb"></i>
-        </span>
-        <h4 class="skill-title">energy</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
-      </article>
-      <!--end single skill-->
-      <!--single skill-->
-      <article class="skill">
-        <span class="skill-icon">
-          <i class="fas fa-mortar-pestle"></i>
-        </span>
-        <h4 class="skill-title">family recipe</h4>
-        <p class="skill-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, natus. Consectetur neque quaerat quidem, obcaecati quo nostrum cum repudiandae similique dignissimos veniam error dolorum sed dolor vel velit cumque non.</p>
-      </article>
-      <!--end single skill-->
-    </section>
-    
-    <!--end skills section-->
+<body>
+  <!-- navbar -->
+  <!-- header -->
+  <header class="header">
+    <div class="banner">
+      <h2>Over one hundred flavors of</h2>
+      <h1>
+        specially <br>
+        crafted tea
+      </h1>
+      <a href="skills.html" class="btn banner-btn">explore</a>
+    </div>
+  </header>
 
-</div>
+  <!--end of header -->
+  <div class="content-divider"></div>
 
-    <!-- YOUR CODE GOES HERE -->
+  <!--skills section-->
+  <section class="skills clearfix">
+    <!--single skill-->
+    <article class="skill">
+      <span class="skill-icon">
+        <i class="fas fa-mug-hot"></i>
+      </span>
+      <h4 class="skill-title">made in US</h4>
+      <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis,
+        rerum?</p>
+    </article>
+    <!--end single skill-->
+    <!--single skill-->
+    <article class="skill">
+      <span class="skill-icon">
+        <i class="fas fa-glass-cheers"></i>
+      </span>
+      <h4 class="skill-title">relaxation</h4>
+      <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis,
+        rerum?</p>
+    </article>
+    <!--end single skill-->
+    <!--single skill-->
+    <article class="skill">
+      <span class="skill-icon">
+        <i class="fas fa-bomb"></i>
+      </span>
+      <h4 class="skill-title">energy</h4>
+      <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis,
+        rerum?</p>
+    </article>
+    <!--end single skill-->
+    <!--single skill-->
+    <article class="skill">
+      <span class="skill-icon">
+        <i class="fas fa-mortar-pestle"></i>
+      </span>
+      <h4 class="skill-title">family recipe</h4>
+      <p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis,
+        rerum?</p>
+    </article>
+    <!--end single skill-->
+  </section>
 
-    <script src="app.js"></script>
-  </body>
+  <!--end skills section-->
+
+
+
+  <!-- YOUR CODE GOES HERE -->
+
+</body>
+
 </html>
