--- a/tea-station/index.html
+++ b/tea-station/index.html
@@ -81,7 +81,35 @@
   </section>
 
   <!--end skills section-->
+<!-- about-->
+<section>
+  <div class="section-center clearfix">
+    <!--about img-->
+    <article class="about-img">
+<div class="about-picture-container">
+  <img src="./images/about-bcg.jpeg" alt="tea" class="about-picture">
+</div>
+    </article>
+    <!--about info-->
+    <article class="about-info">
+      <!-- section title -->
+      <div class="section-title">
+        <h3>about our</h3>
+        <h2>tea station</h2>
+      </div>
+      <!-- end of section title -->
+      <p class="about-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
+      </p>
+      <p class="about-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
+      </p>
+      <a href="about.html" class="btn">learn more</a>
+    </article>
+  </div>
+</section>
 
+<!--end of about-->
 
 
   <!-- YOUR CODE GOES HERE -->
