--- a/tea-station/index.html
+++ b/tea-station/index.html
@@ -81,36 +81,79 @@
   </section>
 
   <!--end skills section-->
-<!-- about-->
-<section>
-  <div class="section-center clearfix">
-    <!--about img-->
-    <article class="about-img">
-<div class="about-picture-container">
-  <img src="./images/about-bcg.jpeg" alt="tea" class="about-picture">
-</div>
-    </article>
-    <!--about info-->
-    <article class="about-info">
-      <!-- section title -->
-      <div class="section-title">
-        <h3>about our</h3>
-        <h2>tea station</h2>
-      </div>
-      <!-- end of section title -->
-      <p class="about-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
-      </p>
-      <p class="about-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
-      </p>
-      <a href="about.html" class="btn">learn more</a>
-    </article>
-  </div>
-</section>
+  <!-- about-->
+  <section>
+    <div class="section-center clearfix">
+      <!--about img-->
+      <article class="about-img">
+        <div class="about-picture-container">
+          <img src="./images/about-bcg.jpeg" alt="tea" class="about-picture">
+        </div>
+      </article>
+      <!--about info-->
+      <article class="about-info">
+        <!-- section title -->
+        <div class="section-title">
+          <h3>about our</h3>
+          <h2>tea station</h2>
+        </div>
+        <!-- end of section title -->
+        <p class="about-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
+        </p>
+        <p class="about-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolores eveniet ea, atque totam molestiae.
+        </p>
+        <a href="about.html" class="btn">learn more</a>
+      </article>
+    </div>
+  </section>
 
-<!--end of about-->
-
+  <!--end of about-->
+  <!--products -->
+  <section class="products">
+    <div class="section-center clearfix">
+      <!--products info-->
+      <article class="products-info">
+        <!-- section title -->
+        <div class="section-title">
+          <h3>check out</h3>
+          <h2>our products</h2>
+        </div>
+        <!-- end of section title -->
+        <p class="product-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae iusto mollitia vitae corrupti dolorem
+          cupiditate, harum doloribus! Labore nihil temporibus debitis quae corrupti, libero exercitationem.
+        </p>
+        <a href="products.html" class="btn">inventory</a>
+      </article>
+      <!--products inventory-->
+      <article class="products-inventory clearfix">
+        <!--single product-->
+        <div class="product">
+          <img src="./images/product-1.jpeg" alt="single product" class="product-img">
+          <h4 class="product-title">ginger peach tea</h4>
+          <h4 class="product-price">$6.99</h4>
+        </div>
+        <!-- end of single product-->
+         <!--single product-->
+         <div class="product">
+          <img src="./images/product-2.jpeg" alt="single product" class="product-img">
+          <h4 class="product-title">fruit sangria</h4>
+          <h4 class="product-price">$6.99</h4>
+        </div>
+        <!-- end of single product-->
+         <!--single product-->
+         <div class="product">
+          <img src="./images/product-3.jpeg" alt="single product" class="product-img">
+          <h4 class="product-title">white tea tea</h4>
+          <h4 class="product-price">$6.99</h4>
+        </div>
+        <!-- end of single product-->
+      </article>
+    </div>
+  </section>
+  <!--end of products -->
 
   <!-- YOUR CODE GOES HERE -->
 
